<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BusETA</string>
    <string name="launcher_name">巴士ETA</string>
    <string name="channel_name_eta">ETA 通知</string>
    <string name="channel_description_eta">ETA 通知</string>
    <string name="channel_name_arrival_alert">到站提示通知</string>
    <string name="channel_description_arrival_alert">到站提示通知</string>
    <string name="channel_name_foreground">「%1$s」背景執行需要用到的前台通知</string>
    <string name="channel_description_foreground">長按可永久隱藏此類別通知（不會影響ETA通知）</string>
    <string name="channel_name_update">檢查更新</string>
    <string name="channel_description_update">正在更新路線資料</string>
    <string name="default_notification_channel_id">CHANNEL_ID_DEFAULT</string>

    <string name="action_settings">設定</string>
    <string name="action_search">搜尋</string>
    <string name="action_share">分享</string>
    <string name="action_refresh">重新載入</string>
    <string name="follow">追蹤</string>
    <string name="unfollow">停止追蹤</string>
    <string name="action_confirm">確認</string>
    <string name="action_cancel">取消</string>
    <string name="action_update">更新</string>
    <string name="action_notification">顯示通知</string>

    <string name="add_new_group">新增組合</string>
    <string name="colour">顏色</string>
    <string name="default_value">預設</string>
    <string name="dest">往</string>
    <string name="destination">往%s</string>
    <string name="disabled">禁用</string>
    <string name="direction_both_ways">%s – %s</string>
    <string name="dots" translatable="false">&#8230;</string>
    <string name="enabled">啟用</string>
    <string name="edit">編輯</string>
    <string name="eta">到站時間預報</string>
    <string name="eta_short">ETA</string>
    <string name="everyday">每天</string>
    <string name="hint_enter_route">輸入路線&#8230;</string>
    <string name="group">組合</string>
    <string name="interpunct" translatable="false">\u00A0&#183;\u00A0</string>
    <string name="minute">分鐘</string>
    <string name="minutes">%1$s分鐘</string>
    <string name="monday_to_friday">星期一至五</string>
    <string name="monday_to_saturday">星期一至六</string>
    <string name="now">現在</string>
    <string name="open_source_license">開放原始碼授權</string>
    <string name="orig">從</string>
    <string name="origin">從%s</string>
    <string name="remove">移除</string>
    <string name="remove_group">移除組合</string>
    <string name="rename">改名</string>
    <string name="saturday">星期六</string>
    <string name="search_route">搜尋路線</string>
    <string name="search_route_directly">嘗試搜尋路線 >></string>
    <string name="start_search_route">按右下角按鈕，開始搜尋路線</string>
    <string name="stop_name">站名</string>
    <string name="special_info">特別資料</string>
    <string name="sunday_and_holiday">星期日及公眾假期</string>
    <string name="timetable">時間表</string>
    <string name="uncategorised">未分類</string>
    <string name="undo">復原</string>

    <string name="label_last_updated">數據最後更新：</string>
    <string name="label_server_time">獲取數據（伺服器時間）：</string>

    <string name="title_settings">設定</string>
    <string name="title_app_theme">主題</string>
    <string name="category_about">關於</string>
    <string name="title_app_name" translatable="false">%s \u00A9 2015-2020</string>
    <string name="title_app_version">版本</string>
    <string name="summary_app_version" translatable="false">%1$s (%2$s)</string>
    <string name="title_developer">開發者</string>
    <string name="summary_developer" translatable="false">AlvinHKH</string>
    <string name="category_statement">聲明</string>
    <string name="summary_statement">All data come from official website. \nNo guarantee that the accuracy or timeliness of information provided.</string>

    <string name="title_load_wheelchair_icon">輪椅圖示</string>
    <string name="title_load_wifi_icon">WiFi圖示</string>
    <string name="title_load_stop_image">車站圖片</string>
    <string name="title_check_app_update">檢查更新</string>
    <string name="title_hide_ad">隱藏廣告</string>
    <string name="summary_on_hide_ad">除設定頁面，不顯示其他廣告</string>
    <string name="summary_off_hide_ad">@null</string>
    <string name="data_source">資料來源</string>
    <string name="widgets">小工具 Widgets</string>
    <string name="no_of_rows">行數</string>

    <string name="message_app_update">新版本：%s</string>
    <string name="message_confirm_clear_follow">你確定要清除追蹤名單？</string>
    <string name="message_confirm_clear_route">你確定要清除暫存路線？</string>
    <string name="message_confirm_clear_search_history">你確定要清除搜尋記錄？</string>
    <string name="message_clear_fail_follow">沒有清除任何記錄</string>
    <string name="message_clear_fail_route">沒有清除任何記錄</string>
    <string name="message_clear_fail_search_history">沒有清除任何記錄</string>
    <string name="message_clear_success_follow">成功清除追蹤名單</string>
    <string name="message_clear_success_route">成功清除暫存路線</string>
    <string name="message_clear_success_search_history">成功清除搜尋記錄</string>
    <string name="message_database_updating">數據庫更新中</string>
    <string name="message_database_updated">數據庫經已更新</string>
    <string name="message_fail_to_request">未能載入，請再試一次</string>
    <string name="message_hide_ad">除設定頁面，其他廣告經已隱藏</string>
    <string name="message_hide_ad_smile">:)</string>
    <string name="message_hide_ad_tip">試下SEARCH “%1$s”同“%2$s”</string>
    <string name="message_loading">載入中&#8230;</string>
    <string name="message_no_geo_app">沒有安裝地圖應用程式</string>
    <string name="message_no_app_update">已經是最新版本</string>
    <string name="message_no_data">暫時沒有資料</string>
    <string name="message_no_internet_connection">請檢查網絡連線</string>
    <string name="message_no_notice">暫時沒有任何通告</string>
    <string name="message_remove_from_search_history">從搜尋記錄中移除</string>
    <string name="message_remove_from_follow_list">從追蹤名單中移除</string>
    <string name="message_request_hide_ad">收到! 除咗設定嗰頁，其他廣告都隱藏晒</string>
    <string name="message_request_hide_ad_again">除咗設定嗰頁，其他廣告都已經隱藏晒，唔洗講咁多次!</string>
    <string name="message_request_show_ad">所有廣告都唔再隱藏喇 :)</string>
    <string name="message_share_title">同朋友分享 BusETA</string>
    <string name="message_share_text">快啲下載 BusETA 巴士到站時間預報 App :)\nhttps://buseta.alvinhkh.com</string>
    <string name="message_shown_as_notification">已顯示在通知欄</string>
    <string name="message_total_routes">(共 %s 條路線)</string>
    <string name="no_follow_stop">未有追蹤車站</string>
    <string name="no_bbi">沒有巴士轉乘計劃</string>
    <string name="removed_from_follow_list">「%1$s」已從追蹤名單中移除</string>
    <string name="removed_from_search_history">「%1$s」已從搜尋記錄中移除</string>
    <string name="swipe_to_remove_follow_stop">向左右掃即可移除追蹤車站</string>
    <string name="provider_no_eta">營運商尚未提供到站時間預報</string>
    <string name="temporarily_no_eta">暫時未能提供到站時間預報</string>
    <string name="updating">更新中…</string>

    <string name="url_app" translatable="false">https://buseta.alvinhkh.com</string>
    <string name="url_developer" translatable="false">https://www.alvinhkh.com</string>

    <string name="content_description_icon">Icon</string>

    <string name="bus_to_bus_interchange_scheme">巴士轉乘計劃</string>
    <string name="clear_cached_route">清除暫存路線</string>
    <string name="clear_follow">清除追蹤名單</string>
    <string name="clear_history">清除搜尋記錄</string>
    <string name="display">顯示</string>
    <string name="edit_follow_group">編輯追蹤組合</string>
    <string name="hide">隱藏</string>
    <string name="location_map">街道圖</string>
    <string name="missing_input">Missing Input</string>
    <string name="map">地圖</string>
    <string name="station_layout">位置圖</string>
    <string name="streetview">街景</string>
    <string name="route">路線</string>
    <string name="route_path">%1$s 往%2$s</string>
    <string name="scheduled_bus">預定班次</string>
    <string name="search_history">搜尋記錄</string>
    <string name="general">一般</string>
    <string name="github_issues">問題回報 (via GitHub)</string>
    <string name="github_issues_url" translatable="false">https://github.com/alvinhkh/buseta/issues</string>
    <string name="location_permission">位置權限</string>
    <string name="permission_granted_yes">已經取得</string>
    <string name="permission_granted_no">還未取得</string>
    <string name="capacity_empty">空</string>
    <string name="capacity_full">滿</string>
    <string name="auto_load">自動載入</string>
    <string name="manual">手動</string>
    <string name="replace">取代</string>
    <string name="arrival_alert">到站落車</string>
    <string name="arrival_alert_added">新增到站落車提示</string>
    <string name="arrival_alert_existed">同時間只能設定一個到站落車提示</string>
    <string name="arrival_alert_removed">移除了到站落車提示</string>
    <string name="arrival_alert_entered">進入落車提示車站範圍</string>
    <string name="arrival_alert_leaving">離開落車提示車站範圍</string>
    <string name="arrival_alert_unknown">到站落車提示: 未知問題</string>
    <string name="latest_news">最新消息</string>
    <string name="traffic_news">交通消息</string>
    <string name="notice">通告</string>
    <string name="km">%1$.2f公里</string>
    <string name="km_short">%1$.2fkm</string>
    <string name="kmb_eta">九巴 ETA</string>
    <string name="bus">巴士</string>
    <string name="railway">地鐵</string>
    <string name="provider_aes_bus">機場快綫穿梭巴士</string>
    <string name="provider_ctb">城巴</string>
    <string name="provider_lwb">龍運巴士</string>
    <string name="provider_lrtfeeder">港鐵巴士</string>
    <string name="provider_kmb">九龍巴士</string>
    <string name="provider_mtr">香港鐵路</string>
    <string name="provider_nlb">新大嶼山巴士</string>
    <string name="provider_nwfb">新世界第一巴士</string>
    <string name="provider_nwst">城巴/新世界第一巴士</string>
    <string name="provider_gmb">專線小巴</string>
    <string name="provider_td">運輸署</string>
    <string name="provider_short_aes_bus">機場快綫</string>
    <string name="provider_short_ctb">城巴</string>
    <string name="provider_short_lwb">龍運</string>
    <string name="provider_short_lrtfeeder">港鐵巴士</string>
    <string name="provider_short_kmb">九巴</string>
    <string name="provider_short_mtr">港鐵</string>
    <string name="provider_short_nlb">嶼巴</string>
    <string name="provider_short_nwfb">新巴</string>
    <string name="provider_short_nwst">城巴/新巴</string>
    <string name="provider_short_residents">居民巴士</string>
    <string name="provider_short_gmb">小巴</string>

    <string name="search_shortcut_short_label">@string/search_route</string>
    <string name="search_shortcut_long_label">@string/search_route</string>
    <string name="search_disabled_message">@string/disabled</string>
    <string name="no_search_result">沒有搜尋結果</string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>

</resources>
