<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.route.RouteActivityAbstract">

    <item
        android:id="@+id/action_notice"
        android:icon="@drawable/ic_outline_event_note_24dp"
        android:title="@string/notice"
        android:orderInCategory="90"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_show_map"
        android:icon="@drawable/ic_outline_map_24dp"
        android:title="@string/map"
        android:visible="false"
        android:orderInCategory="91"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_timetable"
        android:icon="@drawable/ic_outline_access_time_24dp"
        android:title="@string/timetable"
        android:orderInCategory="92"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_bbi"
        android:title="@string/bus_to_bus_interchange_scheme"
        android:orderInCategory="93"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>
