<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:iconifiedByDefault="true"
        android:icon="@drawable/ic_outline_search_24dp"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_outline_refresh_24dp"
        android:orderInCategory="101"
        app:iconTint="@color/white"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_outline_share_24dp"
        android:orderInCategory="900"
        app:iconTint="@color/white"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="1000"
        app:iconTint="@color/white"
        app:showAsAction="never" />

</menu>
