<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appwidget.FollowWidgetConfigurationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/with_header_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Header?" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/group" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/follow_group_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/no_of_rows" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/widget_item_rows_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:spinnerMode="dropdown"
            android:entries="@array/widget_item_lines_entries" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/action_confirm" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>