<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:minHeight="@dimen/card_item_height">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/card_item_icon_touch_target_dense"
        android:layout_height="@dimen/card_item_icon_touch_target_dense"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/card_horizontal_margin"
        android:layout_marginRight="@dimen/card_horizontal_margin"
        android:contentDescription="@string/content_description_icon"
        android:tint="@color/icons"
        android:src="@drawable/ic_outline_directions_bus_24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/card_item_vertical_padding"
        android:layout_marginLeft="@dimen/card_item_label_margin_start"
        android:layout_marginStart="@dimen/card_item_label_margin_start"
        android:layout_marginTop="@dimen/card_item_vertical_padding">

        <TextView
            android:id="@+id/route"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/textPrimary"
            tool:text="@string/route" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            style="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/textPrimary"
            tool:text="@string/route_path" />

        <TextView
            android:id="@+id/description"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/textSecondary"
            tool:text="@string/route_path" />

    </LinearLayout>

</RelativeLayout>
